RESOLVED FIXED232356
DOM GPUP: Yahoo.com has fragments of wrongly-scaled content throughout
https://bugs.webkit.org/show_bug.cgi?id=232356
Summary DOM GPUP: Yahoo.com has fragments of wrongly-scaled content throughout
Tim Horton
Reported 2021-10-26 18:06:17 PDT
DOM GPUP: Yahoo.com has fragments of wrongly-scaled content throughout
Attachments
Patch (17.07 KB, patch)
2021-10-26 18:07 PDT, Tim Horton
no flags
Patch (17.11 KB, patch)
2021-10-26 19:01 PDT, Tim Horton
ews-feeder: commit-queue-
Patch (17.29 KB, patch)
2021-10-26 20:06 PDT, Tim Horton
no flags
Patch (17.20 KB, patch)
2021-10-27 13:54 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2021-10-26 18:07:09 PDT
Tim Horton
Comment 2 2021-10-26 18:07:12 PDT
Tim Horton
Comment 3 2021-10-26 19:01:25 PDT
Tim Horton
Comment 4 2021-10-26 20:06:33 PDT
Tim Horton
Comment 5 2021-10-27 02:26:11 PDT
Seems like I broke ImageBufferTests.ImageBufferSubPixelDrawing somehow
Tim Horton
Comment 6 2021-10-27 13:54:27 PDT
EWS
Comment 7 2021-10-28 10:18:30 PDT
Committed r284991 (243637@main): <https://commits.webkit.org/243637@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442631 [details].
Note You need to log in before you can comment on or make changes to this bug.