Source/WebCore/platform/graphics/cg/ImageBufferCGBackend.cpp
@@ -78,14 +78,6 @@ RetainPtr<CGColorSpaceRef> ImageBufferCGBackend::contextColorSpace(const Graphic
 #endif
 }
 
-void ImageBufferCGBackend::setupContext() const
-{
-    // The initial CTM matches DisplayList::Recorder::clipToDrawingCommands()'s initial CTM.
-    context().scale(FloatSize(1, -1));
-    context().translate(0, -backendSize().height());
-    context().applyDeviceScaleFactor(resolutionScale());
-}
-
 static RetainPtr<CGImageRef> createCroppedImageIfNecessary(CGImageRef image, const IntSize& backendSize)
 {
     if (image && (CGImageGetWidth(image) != static_cast<size_t>(backendSize.width()) || CGImageGetHeight(image) != static_cast<size_t>(backendSize.height())))
@@ -258,6 +250,11 @@ std::unique_ptr<ThreadSafeImageBufferFlusher> ImageBufferCGBackend::createFlushe
 
 void ImageBufferCGBackend::prepareToDrawIntoContext(GraphicsContext&)
 {
+}
+
+bool ImageBufferCGBackend::originAtBottomLeftCorner() const
+{
+    return isOriginAtBottomLeftCorner;
 }
 
 } // namespace WebCore
